--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,35 @@
 *.DAT
 *.LOG2
 *.swp
+
+.IntelliJIdea2017.3/
+.jmc/
+.config/
+.dbshell
+.fzf/
+.gitattributes
+.gitconfig
+.keystore
+.lesshst
+.minttyrc
+.mongorc.js
+.nbprofiler/
+.node-gyp/
+.npmrc
+.python_history
+.subversion/
+.vim/
+.viminfo
+.vue-templates/
+EXPDAT.DMP
+LICENSE
+Learning-Vue.js-2.pdf
+MicrosoftEdgeBackups/
+Oracle/
+_viminfo
+dump.rdb
+java_error_in_idea_13164.log
+package-lock.json
+vimfiles/
+vue-step-step-mastering.pdf
+
